--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,124 +1,133 @@
+.home {
+  width: 80%;
+  margin: 0 auto;
+  font-family: "poppins";
+}
+
 .home__row {
   margin-top: 40px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(4, minmax(10em, auto));
+  gap: 1.5rem;
 }
-.home__rowContainer {
+
+.home__text {
+  position: absolute;
   display: flex;
-  flex-direction: column;
-  max-height: 400px;
-  margin: 10px;
-  margin-bottom: 40px;
+  align-items: center;
+  bottom: 4rem;
+  margin: 0 5%;
+  opacity: 0;
+  transition: 0.5s;
+  z-index: 100;
+}
+
+.home__text p {
+  margin-left: 0.5rem;
+  color: #a8a8a8;
+}
+
+.home__title {
+  /* font-size: 1rem; */
+  color: #fff;
+  font-size: clamp(0.9rem, 1.15vw, 1.3rem);
 }
 
 .home__rowContent {
   position: relative;
-  width: fit-content;
-}
-
-.home__rowContainer img {
-  object-fit: cover;
-  max-height: 300px;
-  border-radius: 15px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-}
-
-.home__rowText {
-  display: none;
-  background: linear-gradient(#011627, #00273b);
-  /* background: white; */
-  width: 100%;
-  padding: 15px;
-  font-size: 14px;
-  box-sizing: border-box;
-  border-radius: 15px;
-  color: white;
-  /* color: #011627; */
-  position: absolute;
-  z-index: 2;
-  left: 0px;
-  bottom: 4px;
-  height: 200px;
-  animation: popup ease 0.5s;
-}
-
-.home__rowContainer:hover .home__rowText {
-  display: flex;
-  cursor: pointer;
-}
-
-.home__footer {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 200px;
-  padding: 5px;
-  height: 100px;
-  box-sizing: border-box;
-  font-family: "poppins";
+  max-height: 20rem;
+  border-radius: 0.8em;
+  overflow: hidden;
+  margin-bottom: 1rem;
 }
 
-.home__footerTitle {
+.home__rowContent::after {
+  content: "";
+  bottom: 0;
+  left: 0;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  background-color: #0000;
+  transition: 0.5s;
 }
 
-.home__footerTitle span {
-  display: flex;
-  font-size: 15px;
-  justify-content: center;
-  color: #011627;
-  background: rgba(0, 0, 0, 0.06);
-  align-items: center;
-  width: 35px;
-  height: 35px;
-  border-radius: 10px;
-  margin-left: 10px;
+.home__rowContent:hover.home__rowContent::after {
+  background-color: #000a;
+  z-index: 5;
 }
 
-.home__footerTitle span:hover {
-  color: #004c75;
+.home__rowContent:hover .home__text {
+  opacity: 1;
+}
+
+.home__img {
+  object-fit: cover;
+  max-height: 20rem;
+  background-color: #001220;
+  mix-blend-mode: multiply;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transform: scale(1);
+  border-radius: 0.8em;
+}
+
+.home__btn {
+  position: absolute;
+  bottom: 0.75rem;
+  padding: 0.75em 1em;
+  left: 0;
+  z-index: 100;
+  width: 90%;
+  margin: 0 5%;
+  border-radius: 1.1em;
+  background: #e9643c;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-family: "poppins";
+  font-weight: 600;
   cursor: pointer;
 }
 
-.home__footerTitle h3 {
-  font-size: 18px;
-  width: 150px;
-  font-weight: bolder;
-}
-
-.home__footerDate {
-  font-size: 14px;
-  color: gray;
+.home__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  top: 0.75rem;
+  position: absolute;
+  margin: 0 5%;
+  width: 90%;
+  z-index: 100;
 }
 
 .home__rowRating {
   display: flex;
-}
-
-.home__rowRating {
-  display: flex;
+  opacity: 0;
   align-items: center;
+  transition: 0.5s;
 }
 .home__rowRating span {
-  color: #f0c040;
+  color: #e6c15e;
 }
 
 .home__ratingCount {
   font-size: 14px;
+  color: #fff;
+  margin-left: 0.2rem;
 }
 
-@keyframes popup {
-  0% {
-    height: 0;
-    opacity: 0;
-  }
-  100% {
-    height: 200px;
-    opacity: 1;
-  }
+.home__rowContent:hover .home__rowRating {
+  opacity: 1;
+}
+
+.home__add {
+  color: #fff;
+  padding: 0.5em 1em;
+  border-radius: 0.25em;
+  background: #fff5;
+  cursor: pointer;
 }
